--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -2,12 +2,16 @@
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Sundra731.github.io/react-js-jsx-and-css-mastering-front-end-development-Sundra731",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
